improve log/add test
